# nu_plugin_id3

./: .gitignore  Cargo.toml  README.md
src/: main.rs  parse.rs
