[package]
name = "nu_plugin_id3"
version = "0.1.0"
authors = ["notryanb@gmail.com <notryanb@gmail.com>"]
edition = "2018"
description = "An id3 reading plugin for Nushell"
license = "MIT"

[dependencies]
id3 = "0.5"
nu-plugin = "0.10.0"
nu-protocol = "0.10.0"
nu-source = "0.10.0"
nu-errors = "0.10.0"